samples/_failures_safe/1761619598_37694d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c97fd901.c: In function ‘main’:
./samples/SAFE/__tmp_c97fd901.c:163:55: error: expected ‘)’ at end of input
  163 |         qsort(words_heap, word_count, sizeof(WordCount
      |                                             ~         ^
      |                                                       )
./samples/SAFE/__tmp_c97fd901.c:163:9: error: too few arguments to function ‘qsort’
  163 |         qsort(words_heap, word_count, sizeof(WordCount
      |         ^~~~~
In file included from ./samples/SAFE/__tmp_c97fd901.c:3:
/usr/include/stdlib.h:970:13: note: declared here
  970 | extern void qsort (void *__base, size_t __nmemb, size_t __size,
      |             ^~~~~
./samples/SAFE/__tmp_c97fd901.c:163:9: error: expected declaration or statement at end of input
  163 |         qsort(words_heap, word_count, sizeof(WordCount
      |         ^~~~~
./samples/SAFE/__tmp_c97fd901.c:163:9: error: expected declaration or statement at end of input
